tests/error/py_errors/list_empty.err
Error: Cannot infer type (at $FILE:6:9)
  | 
4 | @compile_guppy
5 | def foo() -> None:
6 |     xs = py([])
  |          ^^^^^^ Cannot infer type variables in expression of type
  |                 `array[?T, 0]`

Guppy compilation failed due to 1 previous error
